--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -72,7 +72,7 @@
 							</li>
 
 							<!-- ENGEENERING TEST firma & mypay -->
-							<li>
+							<li th:if="${#authentication.principal.hasProfile('ENGINEERING')}">
 								<a>
 									<i class="fa fa-bug"></i> <span th:text="#{engineering.engineering}">label.engineering</span>
 									<span class="fa fa-chevron-down"></span>
